Fix wrong position of button dropdown icons

--- a/Resources/Private/Less/components/controls.less
+++ b/Resources/Private/Less/components/controls.less
@@ -111,8 +111,8 @@
                                 position: absolute;
                                 top: 0;
                                 left: 0;
-                                width: 80px;
-                                height: 80px;
+                                width: 40px;
+                                height: 40px;
                                 content: " ";
                                 background: url(../Images/controlIcons.svg) no-repeat 0 0;
                             }
